welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:11: error: not found: value testColonne
while (!vueBiscuit) { testColonne();
                      ^Program:15: error: type mismatch;
 found   : Unit
 required: Boolean
gauche();avance();droite()
                        ^