welcome.lessons.welcome.methods.returning.MethodsReturning.scala.code
def haveBaggle():Boolean = {
var vueBiscuit = false;
var tab = 0;
def testcolonne() = {
	for (i<- 0 to 5 ) { if (estSurBiscuit()) {vueBiscuit == true}
	avance()}
	recule(6)
}

while (!vueBiscuit) { testColonne();
	droite();avance();gauche();
	
	}
gauche();avance();droite()




}
